--- a/test.ipynb
+++ b/test.ipynb
@@ -18,13 +18,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "f = (0,0,4)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:36:53.675066033Z",
+     "start_time": "2024-04-30T09:36:53.669499782Z"
+    }
+   },
+   "id": "7002c9c3612588b3"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'tuple' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m f\u001B[38;5;241m/\u001B[39m\u001B[38;5;241m5\u001B[39m\n",
+      "\u001B[0;31mTypeError\u001B[0m: unsupported operand type(s) for /: 'tuple' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "f/5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:37:00.339396318Z",
+     "start_time": "2024-04-30T09:37:00.057602712Z"
+    }
+   },
+   "id": "8d647201951ac22c"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "7002c9c3612588b3"
+   "id": "4ec2aca551aff880"
   }
  ],
  "metadata": {
