Canvas can be set off before img is sent via RestAPI
Img can also be recieved and rendered

--- a/test.ipynb
+++ b/test.ipynb
@@ -3,26 +3,19 @@
   {
    "cell_type": "markdown",
    "id": "7aaf940ed46def75",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# 12.05 HTTP test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "40790399e32b263f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-26T09:27:02.102616925Z",
      "start_time": "2024-05-26T09:27:02.097807022Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -104,11 +97,7 @@
   {
    "cell_type": "markdown",
    "id": "f92f962d718b285e",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# Check Flatten operation to confirm order of "
    ]
@@ -121,9 +110,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-17T14:34:30.678752700Z",
      "start_time": "2024-05-17T14:34:30.555905200Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -143,9 +129,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-17T18:39:52.673865616Z",
      "start_time": "2024-05-17T18:39:52.588813683Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -165,9 +148,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-17T18:50:41.929949534Z",
      "start_time": "2024-05-17T18:50:41.700992884Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -184,9 +164,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-17T18:33:10.832706737Z",
      "start_time": "2024-05-17T18:33:10.653828278Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -202,9 +179,6 @@
     "ExecuteTime": {
      "end_time": "2024-05-17T18:50:54.895477679Z",
      "start_time": "2024-05-17T18:50:53.938690591Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
     }
    },
    "outputs": [],
@@ -215,11 +189,7 @@
   {
    "cell_type": "markdown",
    "id": "53868737-3267-4f65-a196-f81024b4d939",
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "source": [
     "# Demonstrate uint8 loss of info"
    ]
@@ -265,38 +235,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "35560d3d",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T23:17:23.306804100Z",
+     "start_time": "2024-06-02T23:17:23.238149568Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import napari as npi\n",
     "import tifffile as tf\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5fe5c02a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T23:16:45.404429834Z",
+     "start_time": "2024-06-02T23:16:45.278909476Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2509, 3138)\n"
+     ]
+    }
+   ],
    "source": [
     "# Load image\n",
-    "img = np.moveaxis(tf.imread(r\"C:\\Schapiro Lab\\ibrahim_hiwi\\VRproject\\VR Demo dataset\\image_34.tif\"), 0, -1)\n",
+    "img = np.moveaxis(tf.imread(r\"/media/ibrahim/Extended Storage/cloud/Internship/shapiro/exemplar-001_Ch1_DAPI.tif\"), 0, -1)\n",
     "print(img.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "51b00ca9",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-02T23:16:56.985860966Z",
+     "start_time": "2024-06-02T23:16:54.170954169Z"
+    }
+   },
    "outputs": [],
    "source": [
     "viewer = npi.Viewer(title=\"Test\", show=True)\n",
-    "viewer.add_image(img, channel_axis=-1)\n",
-    "viewer.show() # Updates canvas and menu"
+    "viewer.add_image(img[...,None], channel_axis=-1, )\n",
+    "viewer.window._qt_viewer.canvas.show(visible=False, run=False)\n",
+    "img = viewer.window._qt_viewer.canvas.render()\n",
+    "#viewer.show() # Updates canvas and menu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a617ac0a-d0cd-40ba-bdc6-5eedb7d40814",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-02T23:17:42.930087264Z",
+     "start_time": "2024-06-02T23:17:41.939941260Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully sent data\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Feed tiff path to server\n",
+    "content = {\"img\": img.flatten().tolist(), \"shape\": img.shape, \"dtype\": str(img.)}\n",
+    "endpoint = \"http://127.0.0.1:5000//v1//tiff_img\"\n",
+    "\n",
+    "try: \n",
+    "    requests.post(endpoint, json=content)\n",
+    "    print(\"Successfully sent data\")\n",
+    "except Exception as e:\n",
+    "    print(\"Got the following problem here: {}\".format(e))"
    ]
   },
   {
@@ -305,9 +333,7 @@
    "id": "7a7ff6c8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "img = viewer.window._qt_viewer.canvas.render()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -329,6 +355,7 @@
    "outputs": [],
    "source": [
     "viewer = npi.Viewer(title=\"Test\")\n",
+    "show(visible=True, run=False)\n",
     "viewer.add_image(img, channel_axis=-1)\n"
    ]
   },
@@ -343,9 +370,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CellTinder",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "celltinder"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
