Wrong positioning of trash cans

--- a/test.ipynb
+++ b/test.ipynb
@@ -14,8 +14,8 @@
    "id": "40790399e32b263f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T09:27:02.102616925Z",
-     "start_time": "2024-05-26T09:27:02.097807022Z"
+     "end_time": "2024-06-07T09:24:24.572240812Z",
+     "start_time": "2024-06-07T09:24:24.568819062Z"
     }
    },
    "outputs": [],
@@ -29,12 +29,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7002c9c3612588b3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-30T09:36:53.675066033Z",
-     "start_time": "2024-04-30T09:36:53.669499782Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# tiff path\n",
@@ -106,12 +101,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "81bf65a1a1e578e1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-17T14:34:30.678752700Z",
-     "start_time": "2024-05-17T14:34:30.555905200Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -125,12 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e69fe7528cec0896",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-17T18:39:52.673865616Z",
-     "start_time": "2024-05-17T18:39:52.588813683Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import python_codes.unity_functions as uf\n",
@@ -144,12 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6abd2a9872f7e948",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-17T18:50:41.929949534Z",
-     "start_time": "2024-05-17T18:50:41.700992884Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -160,12 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6fdba2a22b584a7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-17T18:33:10.832706737Z",
-     "start_time": "2024-05-17T18:33:10.653828278Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "img_c1 = (img[0][:3]).astype(np.uint16)"
@@ -175,12 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d276f21ee77b5775",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-17T18:50:54.895477679Z",
-     "start_time": "2024-05-17T18:50:53.938690591Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.imshow(img)"
@@ -235,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "35560d3d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-02T23:17:23.306804100Z",
-     "start_time": "2024-06-02T23:17:23.238149568Z"
+     "end_time": "2024-06-17T08:01:47.135578942Z",
+     "start_time": "2024-06-17T08:01:46.921803570Z"
     }
    },
    "outputs": [],
@@ -253,12 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5fe5c02a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-02T23:16:45.404429834Z",
-     "start_time": "2024-06-02T23:16:45.278909476Z"
+     "end_time": "2024-06-17T08:01:48.589237841Z",
+     "start_time": "2024-06-17T08:01:48.242241733Z"
     }
    },
    "outputs": [
@@ -273,37 +243,81 @@
    "source": [
     "# Load image\n",
     "img = np.moveaxis(tf.imread(r\"/media/ibrahim/Extended Storage/cloud/Internship/shapiro/exemplar-001_Ch1_DAPI.tif\"), 0, -1)\n",
-    "print(img.shape)"
+    "print(img.shape)\n",
+    "\n",
+    "imgs = [(img/ 256).astype(int).astype(np.uint8)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "51b00ca9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-06-02T23:16:56.985860966Z",
-     "start_time": "2024-06-02T23:16:54.170954169Z"
+     "end_time": "2024-06-17T08:21:14.361494931Z",
+     "start_time": "2024-06-17T08:21:13.571306592Z"
     }
    },
    "outputs": [],
    "source": [
     "viewer = npi.Viewer(title=\"Test\", show=True)\n",
     "viewer.add_image(img[...,None], channel_axis=-1, )\n",
-    "viewer.window._qt_viewer.canvas.show(visible=False, run=False)\n",
-    "img = viewer.window._qt_viewer.canvas.render()\n",
+    "viewer.window._qt_viewer.canvas.show(False)\n",
+    "imgs = [viewer.window._qt_viewer.canvas.render()]\n",
+    "#imgs = [x.data for x in viewer.layers]\n",
+    "#img = viewer.window._qt_viewer.canvas.render()\n",
     "#viewer.show() # Updates canvas and menu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "viewer.window._qt_viewer.canvas.show(True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-17T08:34:45.617632744Z",
+     "start_time": "2024-06-17T08:34:45.517384250Z"
+    }
+   },
+   "id": "ec50ce2ae40ed147"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(imgs[0].dtype)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-06-12T16:21:34.000040988Z",
+     "start_time": "2024-06-12T16:21:33.994964558Z"
+    }
+   },
+   "id": "770df100c97b0b90"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "a617ac0a-d0cd-40ba-bdc6-5eedb7d40814",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-06-02T23:17:42.930087264Z",
-     "start_time": "2024-06-02T23:17:41.939941260Z"
+     "end_time": "2024-06-17T08:21:23.000012759Z",
+     "start_time": "2024-06-17T08:21:21.817658351Z"
     }
    },
    "outputs": [
@@ -317,7 +331,7 @@
    ],
    "source": [
     "# Feed tiff path to server\n",
-    "content = {\"img\": img.flatten().tolist(), \"shape\": img.shape, \"dtype\": str(img.)}\n",
+    "content = {\"img\": [img.flatten().tolist() for img in imgs] , \"shape\": imgs[0].shape, \"channel_sizes\": [img.shape[-1] if len(img.shape) > 2 else 1 for img in imgs ],  \"dtype\": str(img[0].dtype)}\n",
     "endpoint = \"http://127.0.0.1:5000//v1//tiff_img\"\n",
     "\n",
     "try: \n",
