Continue working on positioning title of whole image

--- a/test.ipynb
+++ b/test.ipynb
@@ -272,22 +272,36 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "viewer.window._qt_viewer.canvas.show(True)"
-   ],
+   "id": "ec50ce2ae40ed147",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-17T08:34:45.617632744Z",
      "start_time": "2024-06-17T08:34:45.517384250Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
-   "id": "ec50ce2ae40ed147"
+   "outputs": [],
+   "source": [
+    "viewer.window._qt_viewer.canvas.show(True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "770df100c97b0b90",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-12T16:21:34.000040988Z",
+     "start_time": "2024-06-12T16:21:33.994964558Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -299,25 +313,20 @@
    ],
    "source": [
     "print(imgs[0].dtype)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-06-12T16:21:34.000040988Z",
-     "start_time": "2024-06-12T16:21:33.994964558Z"
-    }
-   },
-   "id": "770df100c97b0b90"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a617ac0a-d0cd-40ba-bdc6-5eedb7d40814",
    "metadata": {
-    "collapsed": false,
     "ExecuteTime": {
      "end_time": "2024-06-17T08:21:23.000012759Z",
      "start_time": "2024-06-17T08:21:21.817658351Z"
+    },
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
     }
    },
    "outputs": [
@@ -351,10 +360,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db6c5062",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-21T18:29:08.405724578Z",
+     "start_time": "2024-07-21T18:29:07.847680196Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'img' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m plt\u001b[38;5;241m.\u001b[39mimshow(\u001b[43mimg\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'img' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -374,9 +400,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e0482ddbdeb473b4",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "source": [
+    "Calculate distances\n",
+    "21.07.24"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "25bfe7a408aaabb1",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-8294.284650280479\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "Width, Height = 10557, 9072\n",
+    "\n",
+    "visualAngle = 1000\n",
+    "\n",
+    "# Assuming Width and Height are defined elsewhere\n",
+    "objectSize = math.sqrt(math.pow(Width, 2) + math.pow(Height, 2))\n",
+    "\n",
+    "# Convert visual angle from degrees to radians\n",
+    "thetaRadians = math.radians(visualAngle)\n",
+    "\n",
+    "# Calculate viewing distance using the rearranged formula\n",
+    "viewingDistance = objectSize / (2 * math.tan(thetaRadians / 2))\n",
+    "\n",
+    "print(viewingDistance)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abf5d592",
+   "id": "52926cd9-03fc-4da4-bf00-e5fb65ca366c",
    "metadata": {},
    "outputs": [],
    "source": []
